--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 
                         <div class="s-intro__content-pretitle text-pretitle">Hello</div>
                         <h1 class="s-intro__content-title">
-                        I'm Jonathan Doe <br>
-                        a product designer <br>
+                        I'm Jai Sharma <br>
+                        a superstar kid <br>
                         base in Somewhere.
                         </h1>                            
 
